--- a/src/app/components/forms/register/register.component.html
+++ b/src/app/components/forms/register/register.component.html
@@ -1,46 +1,113 @@
-<form>
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="inputEmail4">Email</label>
-        <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-      </div>
-      <div class="form-group col-md-6">
-        <label for="inputPassword4">Password</label>
-        <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
-      </div>
-    </div>
-    <div class="form-group">
-      <label for="inputAddress">Address</label>
-      <input type="text" class="form-control" id="inputAddress" placeholder="1234 Main St">
-    </div>
-    <div class="form-group">
-      <label for="inputAddress2">Address 2</label>
-      <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-    </div>
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="inputCity">City</label>
-        <input type="text" class="form-control" id="inputCity">
-      </div>
-      <div class="form-group col-md-4">
-        <label for="inputState">State</label>
-        <select id="inputState" class="form-control">
-          <option selected>Choose...</option>
-          <option>...</option>
-        </select>
-      </div>
-      <div class="form-group col-md-2">
-        <label for="inputZip">Zip</label>
-        <input type="text" class="form-control" id="inputZip">
+
+
+
+<div class="container">
+    <div class="row">
+      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+        <div class="card card-signin my-5">
+          <div class="card-body">
+            <h5 class="card-title text-center">Connexion</h5>
+            <form class="form-signin">
+              <div class="form-label-group">
+                <input type="email" id="inputEmail" class="form-control" placeholder="Adresse e-mail" required autofocus>
+                <label for="inputEmail">Adresse e-mail</label>
+              </div>
+  
+              <div class="form-label-group">
+                <input type="password" id="inputPassword" class="form-control" placeholder="Mot de passe" required>
+                <label for="inputPassword">Mot de passe</label>
+              </div>
+  
+              <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Connexion</button>
+            </form>
+          </div>
+        </div>
       </div>
     </div>
-    <div class="form-group">
-      <div class="form-check">
-        <input class="form-check-input" type="checkbox" id="gridCheck">
-        <label class="form-check-label" for="gridCheck">
-          Check me out
-        </label>
+  </div>
+  
+  
+<br>
+<p>si vous n'avez pas de compte, veuillez vous enregistrer</p>
+<div class="container">
+    <div class="row">
+      <div class="col-sm-9 col-md-7 col-lg-10 mx-auto">
+        <div class="card card-signin my-5">
+          <div class="card-body">
+            <h5 class="card-title text-center">Connexion</h5>
+            <form>
+                <h1>Formulaire d'inscription</h1>
+                <div class="form-row">
+            
+                    <form>
+                        <div class="row">
+                            <div class="col">
+                                <label for="inputAddress2">Prenom</label>
+                                <input type="text" class="form-control" placeholder="Prenom">
+                            </div>
+                            <div class="col">
+                                <label for="inputAddress2">Nom</label>
+                                <input type="text" class="form-control" placeholder="Nom">
+                            </div>
+                        </div>
+                    </form>
+                    <div class="form-group col-md-6">
+            
+                        <label for="inputAddress2">date de naissance</label>
+                        <input type="date" class="form-control" id="inputbirthDate">
+                    </div>
+            
+            
+            
+                    <div class="row">
+                        <div class="col">
+            
+                            <label for="inputEmail4">Email</label>
+                            <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
+                        </div>
+                        <div class="col">
+                            <label for="inputPassword4">Password</label>
+                            <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
+                        </div>
+                    </div>
+                </div>
+                <div class="form-group col-md-2">
+                    <label for="inputZip">numero de telephone</label>
+                    <input type="text" class="form-control" id="inputtel">
+                </div>
+                <div class="form-group">
+                    <label for="inputAddress">Address</label>
+                    <input type="text" class="form-control" id="inputAddress" placeholder="adresse">
+                </div>
+            
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inputCity">Entreprise*</label>
+                        <input type="text" class="form-control" id="inputEntreprise">
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="inputState">Status</label>
+                        <select id="inputState" class="form-control">
+                            <option selected>Choose...</option>
+                            <option>particulier</option>
+                            <option>professionnel</option>
+                        </select>
+                    </div>
+            
+                </div>
+                <div class="form-group">
+                    <div class="form-check">
+                        <input class="form-check-input" type="checkbox" id="gridCheck">
+                        <label class="form-check-label" for="gridCheck">
+                            Check me out
+                        </label>
+                    </div>
+                </div>
+                <button type="submit" class="btn btn-primary">Register</button>
+              
+            </form>
+          </div>
+        </div>
       </div>
     </div>
-    <button type="submit" class="btn btn-primary">Sign in</button>
-  </form>
+  </div>
