--- a/src/app/components/forms/register/register.component.html
+++ b/src/app/components/forms/register/register.component.html
@@ -1,113 +1,111 @@
-
-
-
 <div class="container">
-    <div class="row">
-      <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
-        <div class="card card-signin my-5">
-          <div class="card-body">
-            <h5 class="card-title text-center">Connexion</h5>
-            <form class="form-signin">
-              <div class="form-label-group">
-                <input type="email" id="inputEmail" class="form-control" placeholder="Adresse e-mail" required autofocus>
-                <label for="inputEmail">Adresse e-mail</label>
-              </div>
-  
-              <div class="form-label-group">
-                <input type="password" id="inputPassword" class="form-control" placeholder="Mot de passe" required>
-                <label for="inputPassword">Mot de passe</label>
-              </div>
-  
-              <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Connexion</button>
-            </form>
-          </div>
+  <div class="row">
+    <div class="col-sm-9 col-md-7 col-lg-5 mx-auto">
+      <div class="card card-signin my-5">
+        <div class="card-body">
+          <h5 class="card-title text-center">Connexion</h5>
+          <form class="form-signin">
+            <div class="form-label-group">
+              <input type="email" id="inputEmail" class="form-control" placeholder="Adresse e-mail" required autofocus>
+              <label for="inputEmail">Adresse e-mail</label>
+            </div>
+
+            <div class="form-label-group">
+              <input type="password" id="inputPassword" class="form-control" placeholder="Mot de passe" required>
+              <label for="inputPassword">Mot de passe</label>
+            </div>
+
+            <button class="btn btn-lg btn-primary btn-block text-uppercase" type="submit">Connexion</button>
+          </form>
         </div>
       </div>
     </div>
   </div>
-  
-  
+</div>
+
+
 <br>
-<p>si vous n'avez pas de compte, veuillez vous enregistrer</p>
+<p class="text-center">si vous n'avez pas de compte, veuillez vous enregistrer</p>
 <div class="container">
-    <div class="row">
-      <div class="col-sm-9 col-md-7 col-lg-10 mx-auto">
-        <div class="card card-signin my-5">
-          <div class="card-body">
-            <h5 class="card-title text-center">Connexion</h5>
-            <form>
-                <h1>Formulaire d'inscription</h1>
-                <div class="form-row">
-            
-                    <form>
-                        <div class="row">
-                            <div class="col">
-                                <label for="inputAddress2">Prenom</label>
-                                <input type="text" class="form-control" placeholder="Prenom">
-                            </div>
-                            <div class="col">
-                                <label for="inputAddress2">Nom</label>
-                                <input type="text" class="form-control" placeholder="Nom">
-                            </div>
-                        </div>
-                    </form>
-                    <div class="form-group col-md-6">
-            
-                        <label for="inputAddress2">date de naissance</label>
-                        <input type="date" class="form-control" id="inputbirthDate">
-                    </div>
-            
-            
-            
-                    <div class="row">
-                        <div class="col">
-            
-                            <label for="inputEmail4">Email</label>
-                            <input type="email" class="form-control" id="inputEmail4" placeholder="Email">
-                        </div>
-                        <div class="col">
-                            <label for="inputPassword4">Password</label>
-                            <input type="password" class="form-control" id="inputPassword4" placeholder="Password">
-                        </div>
-                    </div>
+  <div class="row">
+    <div class="col-sm-9 col-md-7 col-lg-10 mx-auto">
+      <div class="card card-signin my-5">
+        <div class="card-body">
+          <h5 class="card-title text-center">Formulaire d'inscription</h5>
+          <form action="POST" (ngSubmit)="add(utilisateurForm)"  #utilisateurForm=ngForm>
+
+            <div class="form-row">
+
+              <form>
+                <div class="row">
+                  <div class="col">
+                    <label for="inputAddress2">Prenom*</label>
+                    <input type="text" class="form-control" name="prenom" placeholder="Prenom" [(ngModel)]="utilisateur.prenom" #prenom="ngModel">
+                  </div>
+                  <div class="col">
+                    <label for="inputAddress2">Nom*</label>
+                    <input type="text" class="form-control" name="nom" placeholder="Nom" [(ngModel)]="utilisateur.nom" #nom="ngModel">
+                  </div>
                 </div>
-                <div class="form-group col-md-2">
-                    <label for="inputZip">numero de telephone</label>
-                    <input type="text" class="form-control" id="inputtel">
+              </form>
+              <div class="form-group col-md-6">
+
+                <label for="inputAddress2">date de naissance*</label>
+                <input type="date" class="form-control" name="dateNaissance" [(ngModel)]="utilisateur.dateNaissance" #dateNaissance="ngModel">
+              </div>
+
+
+
+              <div class="row">
+                <div class="col">
+
+                  <label for="inputEmail4">Email*</label>
+                  <input type="email" class="form-control" name="email" placeholder="Email" [(ngModel)]="utilisateur.email" #email="ngModel">
                 </div>
-                <div class="form-group">
-                    <label for="inputAddress">Address</label>
-                    <input type="text" class="form-control" id="inputAddress" placeholder="adresse">
+                <div class="col">
+                  <label for="inputPassword4">Password*</label>
+                  <input type="password" class="form-control"name="password" placeholder="Password" [(ngModel)]="utilisateur.password" #password="ngModel">
                 </div>
-            
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="inputCity">Entreprise*</label>
-                        <input type="text" class="form-control" id="inputEntreprise">
-                    </div>
-                    <div class="form-group col-md-4">
-                        <label for="inputState">Status</label>
-                        <select id="inputState" class="form-control">
-                            <option selected>Choose...</option>
-                            <option>particulier</option>
-                            <option>professionnel</option>
-                        </select>
-                    </div>
-            
-                </div>
-                <div class="form-group">
-                    <div class="form-check">
-                        <input class="form-check-input" type="checkbox" id="gridCheck">
-                        <label class="form-check-label" for="gridCheck">
-                            Check me out
-                        </label>
-                    </div>
-                </div>
-                <button type="submit" class="btn btn-primary">Register</button>
-              
-            </form>
-          </div>
+              </div>
+            </div>
+            <div class="form-group col-md-2">
+              <label for="inputZip">numero de telephone*</label>
+              <input type="text" class="form-control" name="telephone" [(ngModel)]="utilisateur.telephone" #telephone="ngModel">
+            </div>
+            <div class="form-group">
+              <label for="inputAddress">Address*</label>
+              <input type="text" class="form-control" name="adresse" placeholder="adresse" [(ngModel)]="utilisateur.adresse" #adresse="ngModel">
+            </div>
+
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="inputCity">Entreprise</label>
+                <input type="text" class="form-control" name="entreprise" [(ngModel)]="utilisateur.entreprise" #entreprise="ngModel">
+              </div>
+              <div class="form-group col-md-4">
+                <label for="inputState">Statut*</label>
+                <select name="statut" class="form-control" [(ngModel)]="utilisateur.statut" #statut="ngModel">
+                  <option selected>Choose...</option>
+                  <option>particulier</option>
+                  <option>professionnel</option>
+                </select>
+              </div>
+
+            </div>
+            <div class="form-group">
+              <div class="form-check">
+                <input class="form-check-input" type="checkbox" id="gridCheck">
+                <label class="form-check-label" for="gridCheck">
+                  Check me out
+                </label>
+              </div>
+            </div>
+            <button class="btn btn-success" type="submit">Register</button>
+
+            <p class="color">* champs obligatoires</p>
+          </form>
         </div>
       </div>
     </div>
   </div>
+</div>
