--- a/src/app/components/forms/register/register.component.html
+++ b/src/app/components/forms/register/register.component.html
@@ -32,7 +32,7 @@
       <div class="card card-signin my-5">
         <div class="card-body">
           <h5 class="card-title text-center">Formulaire d'inscription</h5>
-          <form action="POST" (ngSubmit)="add(utilisateurForm)"  #utilisateurForm=ngForm>
+          <form action="POST" (ngSubmit)="add(utilisateur2Form)"  #utilisateur2Form=ngForm>
 
             <div class="form-row">
 
@@ -40,18 +40,18 @@
                 <div class="row">
                   <div class="col">
                     <label for="inputAddress2">Prenom*</label>
-                    <input type="text" class="form-control" name="prenom" placeholder="Prenom" [(ngModel)]="utilisateur.prenom" #prenom="ngModel">
+                    <input type="text" class="form-control" name="prenom" placeholder="Prenom" [(ngModel)]="utilisateur2.prenom" #prenom="ngModel">
                   </div>
                   <div class="col">
                     <label for="inputAddress2">Nom*</label>
-                    <input type="text" class="form-control" name="nom" placeholder="Nom" [(ngModel)]="utilisateur.nom" #nom="ngModel">
+                    <input type="text" class="form-control" name="nom" placeholder="Nom" [(ngModel)]="utilisateur2.nom" #nom="ngModel">
                   </div>
                 </div>
               </form>
               <div class="form-group col-md-6">
 
                 <label for="inputAddress2">date de naissance*</label>
-                <input type="date" class="form-control" name="dateNaissance" [(ngModel)]="utilisateur.dateNaissance" #dateNaissance="ngModel">
+                <input type="date" class="form-control" name="dateNaissance" [(ngModel)]="utilisateur2.dateNaissance" #dateNaissance="ngModel">
               </div>
 
 
@@ -60,33 +60,33 @@
                 <div class="col">
 
                   <label for="inputEmail4">Email*</label>
-                  <input type="email" class="form-control" name="email" placeholder="Email" [(ngModel)]="utilisateur.email" #email="ngModel">
+                  <input type="email" class="form-control" name="email" placeholder="Email" [(ngModel)]="utilisateur2.email" #email="ngModel">
                 </div>
                 <div class="col">
                   <label for="inputPassword4">Password*</label>
-                  <input type="password" class="form-control"name="password" placeholder="Password" [(ngModel)]="utilisateur.password" #password="ngModel">
+                  <input type="password" class="form-control"name="password" placeholder="Password" [(ngModel)]="utilisateur2.password" #password="ngModel">
                 </div>
               </div>
             </div>
             <div class="form-group col-md-2">
               <label for="inputZip">numero de telephone*</label>
-              <input type="text" class="form-control" name="telephone" [(ngModel)]="utilisateur.telephone" #telephone="ngModel">
+              <input type="text" class="form-control" name="telephone" [(ngModel)]="utilisateur2.telephone" #telephone="ngModel">
             </div>
             <div class="form-group">
               <label for="inputAddress">Address*</label>
-              <input type="text" class="form-control" name="adresse" placeholder="adresse" [(ngModel)]="utilisateur.adresse" #adresse="ngModel">
+              <input type="text" class="form-control" name="adresse" placeholder="adresse" [(ngModel)]="utilisateur2.adresse" #adresse="ngModel">
             </div>
 
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="inputCity">Entreprise</label>
-                <input type="text" class="form-control" name="entreprise" [(ngModel)]="utilisateur.entreprise" #entreprise="ngModel">
+                <input type="text" class="form-control" name="entreprise" [(ngModel)]="utilisateur2.entreprise" #entreprise="ngModel">
               </div>
               <div class="form-group col-md-4">
                 <label for="inputState">Statut*</label>
-                <select name="statut" class="form-control" [(ngModel)]="utilisateur.statut" #statut="ngModel">
-                  <option selected>Choose...</option>
-                  <option>particulier</option>
+                <select name="statut" class="form-control" [(ngModel)]="utilisateur2.statut" #statut="ngModel">
+                
+                  <option selected>particulier</option>
                   <option>professionnel</option>
                 </select>
               </div>
