--- a/src/app/components/core/navbarre/navbarre.component.html
+++ b/src/app/components/core/navbarre/navbarre.component.html
@@ -11,10 +11,10 @@
                   <a class="nav-link active" aria-current="page" routerLink="home">Home</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" routerLink="register">Form</a>
+                  <a class="nav-link active" aria-current="page" routerLink="register">register</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" routerLink="form2">Form2</a>
+                  <a class="nav-link active" aria-current="page" routerLink="users/demande/intra">demande intra</a>
               </li>
               <li class="nav-item">
                   <a class="nav-link active" aria-current="page" routerLink="reactive">Reactive-form</a>
