login vers register

--- a/src/app/components/forms/login/login.component.html
+++ b/src/app/components/forms/login/login.component.html
@@ -23,4 +23,4 @@
   
   
   <br>
-  <p class="text-center">si vous n'avez pas de compte, veuillez vous enregistrer</p>
+  <p class="text-center">si vous n'avez pas de compte, veuillez vous <a routerLink="/register">enregitrer</a></p>
