--- a/src/app/components/forms/theme/theme.component.html
+++ b/src/app/components/forms/theme/theme.component.html
@@ -13,17 +13,17 @@
         </tr>
     </thead>
     <tbody>
-        <tr *ngFor = "let theme of themes" >
-            <td> {{ theme .nomformation }} </td>
-            <td> {{ theme .domaine }} </td>
-            <td> {{ theme .theme }}</td>
-            <td> {{ theme .description}}</td>
-            <td> {{ theme .prix}}</td>
-            <td> {{ theme .duree}}</td>
-            <td> {{ theme .prerequis}}</td>
-            <button  class = "btn btn-info"> Soumettre</button>
+        <tr *ngFor = "let formation of themes " >
+        <ng-container *ngIf="formation.theme === 'Informatique'">
+            <td> {{ formation.nomFormation }} </td>
+            <td> {{ formation.domaine }} </td>
+            <td> {{ formation.theme }}</td>
+            <td> {{ formation.description}}</td>
+            <td> {{ formation.prix}}</td>
+            <td> {{ formation.duree}}</td>
+            <td> {{ formation.prerequis}}</td>
+            <button  class = "btn btn-info"> Sessions</button>
+        </ng-container>
         </tr>
-        <td>
-        </td>
     </tbody>
 </table>
