--- a/src/app/components/forms/theme/theme.component.html
+++ b/src/app/components/forms/theme/theme.component.html
@@ -22,7 +22,7 @@
             <td> {{ formation.prix}}</td>
             <td> {{ formation.duree}}</td>
             <td> {{ formation.prerequis}}</td>
-            <button  class = "btn btn-info"> Sessions</button>
+            <button (click)="goTo() class = "btn btn-info"> Sessions</button>
         </ng-container>
         </tr>
     </tbody>
