--- a/src/app/components/forms/theme-b/theme-b.component.html
+++ b/src/app/components/forms/theme-b/theme-b.component.html
@@ -14,7 +14,7 @@
     </thead>
     <tbody>
         <tr *ngFor = "let formation of themes " >
-        <ng-container *ngIf="formation.theme === 'theme2'">
+        <ng-container *ngIf="formation.theme === 'newTech'">
             <td> {{ formation.nomFormation }} </td>
             <td> {{ formation.domaine }} </td>
             <td> {{ formation.theme }}</td>
