--- a/src/app/components/core/navbarre/navbarre.component.html
+++ b/src/app/components/core/navbarre/navbarre.component.html
@@ -1,34 +1,66 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-      <a class="navbar-brand" href="#">Navbar</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" routerLink="home">Home</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" routerLink="register">register</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" routerLink="users/demande/intra">demande intra</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" routerLink="reactive">Reactive-form</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" routerLink="users">Users</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" routerLink="person">Person</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" routerLink="rperson">ReactivePerson</a>
-              </li>
-          </ul>
-      </div>
-  </div>
+<div class="container pt-2">
+</div>
+<nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light sticky">
+    <div class="container-fluid">
+        <a class="navbar-brand" href="home">Accueil</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" routerLink="contact">Contact</a>
+                </li>
+                <li class="dropdown">
+                    <a class="nav-link active" data-bs-toggle="dropdown" aria-expanded="false">
+                        Catalogue
+                    </a>
+                      <ul class="dropdown-menu ">
+                        <li class="dropdown-item right" href="#">Domaine 1</li>
+                            <ul>
+                                <li class="dropdown-item">Theme 1</li>
+                                <li class="dropdown-item">Theme 2</li>
+                            </ul>
+                        <li class="dropdown-item right" href="#">Domaine 2</li>
+                            <ul>
+                                <li class="dropdown-item">Theme 3</li>
+                                <li class="dropdown-item">Theme 4</li>
+                            </ul>
+                        <li class="dropdown-item right" href="#">Domaine 3</li>
+                            <ul>
+                                <li class="dropdown-item">Theme 5</li>
+                                <li class="dropdown-item">Theme 6</li>
+                            </ul>
+                        <li class="dropdown-item " href="#">Domaine 4</li>
+                            <ul>
+                                <li class="dropdown-item">Theme 7</li>
+                                <li class="dropdown-item">Theme 8</li>
+                            </ul>
+                      </ul>
+                </li>
+            </ul>
+        </div>
+        <button type="button" class="btn btn-outline-success" routerLink="login">Log-in / Register</button>
+    </div>
 </nav>
+
+<script>
+    // When the user scrolls the page, execute myFunction
+    window.onscroll = function() {myFunction()};
+    
+    // Get the navbar
+    var navbar = document.getElementById("navbar");
+    
+    // Get the offset position of the navbar
+    var sticky = navbar.offsetTop;
+    
+    // Add the sticky class to the navbar when you reach its scroll position. Remove "sticky" when you leave the scroll position
+    function myFunction() {
+      if (window.pageYOffset >= sticky) {
+        navbar.classList.add("sticky")
+      } else {
+        navbar.classList.remove("sticky");
+      }
+    } 
+</script>
