demande perso envoyé

--- a/src/app/components/forms/demande-perso/demande-perso.component.html
+++ b/src/app/components/forms/demande-perso/demande-perso.component.html
@@ -1,1 +1,73 @@
-<p>demande-perso works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-9 col-md-7 col-lg-10 mx-auto">
+            <div class="card card-signin my-5">
+                <div class="card-body">
+                    <h5 class="card-title text-center">Demande de formation perso</h5>
+                    <form action="POST" (ngSubmit)="add(demandepersoForm)" #demandepersoForm=ngForm>
+                        <h4>Coordonnées</h4>
+                        <div class="form-row">
+                            <input type="text" class="form-control" name="id" [(ngModel)]="demandeperso.id"
+                                #id="ngModel" hidden>
+                            <div class="row">
+                                <div class="col">
+                                    <label>Prenom</label>
+                                    <input type="text" class="form-control" name="prenom"
+                                        [(ngModel)]="demandeperso.prenom" #prenom="ngModel" placeholder="Prenom">
+                                </div>
+                                <div class="col">
+                                    <label>Nom</label>
+                                    <input type="text" class="form-control" name="nom" [(ngModel)]="demandeperso.nom"
+                                        #nom="ngModel" placeholder="Nom">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <label>Email</label>
+                                    <input type="email" class="form-control" [(ngModel)]="demandeperso.email"
+                                        #email="ngModel" name="Email" placeholder="Email">
+                                </div>
+                                <div class="col">
+                                    <label>Teléphone</label>
+                                    <input type="text" [(ngModel)]="demandeperso.telephone" #telephone="ngModel"
+                                        name="telephone" class="form-control" placeholder="Telephone">
+                                </div>
+                                <div class="form-group">
+                                    <label for="inputEntreprise">Entreprise</label>
+                                    <input type="text" class="form-control" [(ngModel)]="demandeperso.entreprise"
+                                        #entreprise="ngModel" name="Entreprise" placeholder="Entreprise">
+                                </div>
+                            </div>
+
+                            <br>
+                            <h4>Plannification</h4>
+                            <div class="form-group col-md-6">
+                                <label>eligible CPF (oui/non)</label>
+                                <input type="text" [(ngModel)]="demandeperso.eligibleCPF" class="form-control"
+                                    name="eligibleCPF">
+                            </div>
+                        </div>
+                        <div class="form-row">
+                            <div class="form-group col-md-6">
+                                <label>besoins</label>
+                                <input type="text" [(ngModel)]="demandeperso.besoins" #nbrInscrits="ngModel"
+                                    class="form-control" name="besoins">
+                            </div>
+                            <div class="form-group col-md-6">
+                                <label>Objectifs
+                                </label>
+                                <input type="text" [(ngModel)]="demandeperso.objectifs" #lieu="ngModel"
+                                    class="form-control" name="Objectifs">
+                            </div>
+                        </div>
+                        <div class="form-group">
+                        </div>
+                        <br>
+                        <button type="submit" class="btn btn-success">Confirmer ma demande de formation perso</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
