--- a/src/app/components/core/navbarre/navbarre.component.html
+++ b/src/app/components/core/navbarre/navbarre.component.html
@@ -1,6 +1,6 @@
-<div class="container pt-2">
-</div>
+<h1 style="text-align: center ;">ASHA formation</h1>
 <nav id="navbar" class="navbar navbar-expand-lg navbar-light bg-light sticky">
+    
     <div class="container-fluid">
         <a class="navbar-brand" href="home">Accueil</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -17,30 +17,22 @@
                         Catalogue
                     </a>
                       <ul class="dropdown-menu ">
-                        <li class="dropdown-item right" href="#">Domaine 1</li>
+                        <li class="dropdown-item right">Technologie de l'informatique</li>
                             <ul>
-                                <li class="dropdown-item">Theme 1</li>
-                                <li class="dropdown-item">Theme 2</li>
-                            </ul>
-                        <li class="dropdown-item right" href="#">Domaine 2</li>
-                            <ul>
-                                <li class="dropdown-item">Theme 3</li>
-                                <li class="dropdown-item">Theme 4</li>
-                            </ul>
-                        <li class="dropdown-item right" href="#">Domaine 3</li>
-                            <ul>
-                                <li class="dropdown-item">Theme 5</li>
-                                <li class="dropdown-item">Theme 6</li>
-                            </ul>
-                        <li class="dropdown-item " href="#">Domaine 4</li>
-                            <ul>
-                                <li class="dropdown-item">Theme 7</li>
-                                <li class="dropdown-item">Theme 8</li>
+                                <li class="dropdown-item" routerLink="themeConnected">Informatique</li>
+                                <li class="dropdown-item" routerLink="themeBConnected">new Tech</li>
                             </ul>
                       </ul>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" routerLink="users">gestionaire d'utilisateur</a>
+                </li>
+                
             </ul>
+            
         </div>
+      
+      
         <button type="button" class="btn btn-outline-success" routerLink="login">Log-in / Register</button>
     </div>
 </nav>
