--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,1 +1,30 @@
-<p>home works!</p>
+<div class="col-sm-4 mb-3 mb-sm-0">
+  <div class="card">
+    <img src="assets/img/java.png" class="card-img-top" alt="...">
+    <div class="card-body">
+      <h2 class="card-title">Informatique</h2>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="informatique" class="btn btn-primary">formation informatique</a>
+    </div>
+  </div>
+</div>
+<div class="col-sm-4">
+  <div class="card">
+    <img src="assets/img/logoVr.png" class="card-img-top " alt="...">
+    <div class="card-body">
+      <h2 class="card-title">New Tech</h2>
+      <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+      <a href="newTech" class="btn btn-primary">formation New Tech</a>
+    </div>
+  </div>
+  <div class="col-sm-6">
+    <div class="card">
+      <img src="assets/img/hautParleur.png" class="card-img-top" alt="...">
+      <div class="card-body">
+        <h2 class="card-title">besoin d'aide?</h2>
+        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+        <a href="contact" class="btn btn-primary">nous contacter</a>
+      </div>
+    </div>
+  </div>
+</div>
