--- a/src/app/components/home-connected/home-connected.component.html
+++ b/src/app/components/home-connected/home-connected.component.html
@@ -1,2 +1,39 @@
-
-<p>home-connected works!</p>
+<div id="carouselExampleCaptions" class="carousel carousel-dark slide h-100">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img src="assets/img/java.png" class=" d-md-block w-25" alt="...">
+        <div class="carousel-caption d-none d-md-block color">
+          <h2>Informatique</h2>
+          <p>découvrir la face caché des logiciels et du web</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/logoVr.png" class=" d-md-block w-20
+         " alt="...">
+        <div class="carousel-caption d-none d-md-block  color">
+          <h2>New Tech</h2>
+          <p>le futur de la technologie est arrivé</p>
+        </div>
+      </div>
+      <div class="carousel-item">
+        <img src="assets/img/hautParleur.png" class="d-block" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h2>les news</h2>
+          <p>quoi de neuf dans la technosphere</p>
+        </div>
+      </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="visually-hidden">Next</span>
+    </button>
+  </div>
